--- a/apps/backend/views/settings/topMenu.phtml
+++ b/apps/backend/views/settings/topMenu.phtml
@@ -11,13 +11,13 @@
                 </div>
             </div>
         </div>
-        <a href="#">
+        <!--<a href="#">
         <div class="panel-footer">
             <span class="pull-left">Ver Mais</span>
             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
             <div class="clearfix"></div>
         </div>
-        </a>
+        </a>-->
     </div>
 </div>
 <div class="col-lg-3 col-md-6">
@@ -33,13 +33,13 @@
                 </div>
             </div>
         </div>
-        <a href="#">
+        <!--<a href="#">
         <div class="panel-footer">
             <span class="pull-left">Ver Mais</span>
             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
             <div class="clearfix"></div>
         </div>
-        </a>
+        </a>-->
     </div>
 </div>
 <!--<div class="col-lg-3 col-md-6">
