--- a/apps/frontend/views/index.phtml
+++ b/apps/frontend/views/index.phtml
@@ -33,7 +33,9 @@ footer {
         <script src="<?= URL_PROJECT ?>js/raptor.js"> </script>
         <script src="<?= URL_PROJECT ?>js/jquery.twbsPagination.min.js"> </script>
         <script src="<?= URL_PROJECT ?>js/g-analytics.js"> </script>
+        <script src="<?= URL_PROJECT ?>js/facebook-api.js"> </script>
         <script src="<?= URL_PROJECT ?>js/custom.js"> </script>
+
         <?= $this->getContent(); ?>
     </body>
 </html>
