--- a/apps/backend/views/security/twitterTab.phtml
+++ b/apps/backend/views/security/twitterTab.phtml
@@ -1,24 +1,32 @@
-<div class="tab-pane fade" id="facebook">
+<div class="tab-pane fade" id="twitter">
     <div class="col-sm-8">
         <div class="row">
-            <form id="facebook-account" name="facebook-account" role="form">
+            <form id="twitter-account" name="twitter-account" role="form">
                 <div class="panel-heading">
-                    <label style="font-size: 18px;"> Adicionar Link da Página</label>
+                    <label style="font-size: 18px;"> Configurar API do Twitter</label>
                     </div>
                     <div class="form-group input-group col-sm-10">
-                        <span class="input-group-addon">facebook.com/</span>
-                        <input type="text" name="page_name" class="form-control" value="<?= $fb_page_name ?>" placeholder="exemplo">
+                        <span class="input-group-addon">@</span>
+                        <input type="text" name="app_id" class="form-control" value="<?= $tw_account_app_id ?>" placeholder="APP ID">
+                    </div>
+                    <div class="form-group input-group col-sm-10">
+                        <span class="input-group-addon glyphicon glyphicon-asterisk"></span>
+                        <input type="password" name="app_secret" value="<?= $tw_account_app_secret ?>" class="form-control" placeholder="APP Secret">
+                    </div>
+                    <div class="form-group input-group col-sm-10">
+                        <span class="input-group-addon">twitter.com/</span>
+                        <input type="text" name="username" class="form-control" value="<?= $tw_account_username ?>" placeholder="exemplo">
                     </div>
                     <div class="form-group input-group col-sm-6">
-                        <?php if(empty($fb_page_name)){ ?>
-                            <a href="#" id="save-facebook-account" class="btn btn-block btn-primary btn-success"><span class="glyphicon glyphicon-ok"></span> Salvar</a>
+                        <?php if(empty($tw_account_app_id)){ ?>
+                            <a href="#" id="save-twitter-account" class="btn btn-block btn-primary btn-success"><span class="glyphicon glyphicon-ok"></span> Salvar</a>
                         <?php } else{ ?>
-                            <a href="#" id="edit-facebook-account" class="btn btn-block btn-primary btn-warning"><span class="glyphicon glyphicon-edit"></span> Alterar</a>
+                            <a href="#" id="edit-twitter-account" class="btn btn-block btn-primary btn-warning"><span class="glyphicon glyphicon-edit"></span> Alterar</a>
                     <?php }?>
                 </div>
             </form>
         </div>
-        </div>
+    </div>
     <div class="col-lg-4">
         <div class="panel panel-warning">
             <div class="panel-heading">
@@ -34,12 +42,11 @@
     </div>
 </div>
 
-
 <script>
-$("#save-facebook-account").click(function(){
-    var form = $("#facebook-account").serialize();
+$("#save-twitter-account").click(function(){
+    var form = $("#twitter-account").serialize();
     $.ajax({
-        url: "<?= URL_PROJECT ?>security/registerFacebookPageName",
+        url: "<?= URL_PROJECT ?>security/registerTwitterAccountsApiAccess",
         data: form,
         dataType: 'json',
         type: "POST",
@@ -63,10 +70,10 @@ $("#save-facebook-account").click(function(){
     });
 });
 
-$("#edit-facebook-account").click(function(){
-    var form = $("#facebook-account").serialize();
+$("#edit-twitter-account").click(function(){
+    var form = $("#twitter-account").serialize();
     $.ajax({
-        url: "<?= URL_PROJECT ?>security/updateFacebookPageName",
+        url: "<?= URL_PROJECT ?>security/updateTwitterAccountsApiAccess",
         data: form,
         dataType: 'json',
         type: "POST",
