--- a/apps/backend/views/settings/topMenu.phtml
+++ b/apps/backend/views/settings/topMenu.phtml
@@ -1,5 +1,5 @@
 <div class="col-lg-3 col-md-6">
-    <div class="panel panel-primary">
+    <div class="panel panel-warning">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-xs-3">
@@ -42,39 +42,47 @@
         </a>-->
     </div>
 </div>
-<!--<div class="col-lg-3 col-md-6">
-    <div class="panel panel-yellow">
+<div class="col-lg-3 col-md-6">
+    <div class="panel panel-primary">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-xs-3">
-                    <i class="glyphicon glyphicon-large glyphicon-list-alt"></i>
+                    <i class="fa fa-4x fa-facebook"></i>
                 </div>
                 <div class="col-xs-9 text-right">
-                    <div class="huge">124</div>
-                    <div>Comentários</div>
+                    <div class="huge"><?= $facebook_likes ?></div>
+                    <div>Curtidas</div>
                 </div>
             </div>
         </div>
-        <a href="#">
+        <!--<a href="#">
         <div class="panel-footer">
             <span class="pull-left">Ver Mais</span>
             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
             <div class="clearfix"></div>
         </div>
-        </a>
+        </a>-->
     </div>
-</div>-->
+</div>
 <div class="col-lg-3 col-md-6">
-    <div class="panel panel-red">
+    <div class="panel panel-info">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-xs-3">
-                    <i class="glyphicon glyphicon-large glyphicon-home"></i>
+                    <i class="fa fa-4x fa-twitter"></i>
                 </div>
                 <div class="col-xs-9 text-right">
-                    <div class="huge">Visualizar Página</div>
+                    <div class="huge"><?= $followers_count ?></div>
+                    <div>Seguidores</div>
                 </div>
             </div>
         </div>
+        <!--<a href="#">
+        <div class="panel-footer">
+            <span class="pull-left">Ver Mais</span>
+            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+            <div class="clearfix"></div>
+        </div>
+        </a>-->
     </div>
 </div>
