--- a/apps/frontend/views/index/navBar.phtml
+++ b/apps/frontend/views/index/navBar.phtml
@@ -16,7 +16,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="<?= URL_PROJECT ?>index" data-id="title"><?= html_entity_decode($layout->layout_title) ?></a>
+                <a class="navbar-brand" href="<?= URL_PROJECT ?>" data-id="title"><?= html_entity_decode($layout->layout_title) ?></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" data-id="navbar" id="navbar">
