Finalizado configurações apis

--- a/apps/backend/views/security/index.phtml
+++ b/apps/backend/views/security/index.phtml
@@ -10,13 +10,15 @@
     <hr>
     <div class="panel panel-default" >
         <div class="panel-heading">
-            <label style="font-size: 30px;"><i class="glyphicon glyphicon-eye-open"></i> Configurar APIS</label>
+            <label style="font-size: 30px;"><i class="fa fa-2x fa-cogs"></i> Configurações</label>
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs">
-                <li><a class="active" href="#google" data-toggle="tab"><i class="fa fa-2x fa-google"></i> Google</a>
+                <li><a class="active" href="#preferences" data-toggle="tab"><i class="fa fa-2x fa-google"></i>Preferências</a>
+                </li>
+                <li><a class="active" href="#google" data-toggle="tab"><i class="fa fa-2x fa-google"></i> Google Api</a>
                 </li>
                 <li><a href="#twitter" data-toggle="tab"><i class="fa fa-2x fa-twitter"></i> Twitter</a>
                 </li>
