--- a/apps/backend/views/settings/sidebar.phtml
+++ b/apps/backend/views/settings/sidebar.phtml
@@ -23,7 +23,7 @@
     <!-- /sub-appearance-->
     <?php } ?>
     <?php if($user_type_id == 1 || $user_type_id == 2){ ?>
-    <a href="#" id="security" class="list-group-item strong" data-toggle="collapse" data-parent="#MainMenu"><i class="glyphicon glyphicon-eye-open"></i> APIS e Redes Sociais </a>
+    <a href="#" id="security" class="list-group-item strong" data-toggle="collapse" data-parent="#MainMenu"><i class="fa fa-cogs"></i> Configurações </a>
     <?php } ?>
     <?php if($user_type_id == 1){ ?>
     <a href="#" class="list-group-item strong" id="update" data-toggle="collapse" data-parent="#MainMenu"><i class="glyphicon     glyphicon-refresh"></i> Atualizações </a>
