Configurado regras para edição de usuários

--- a/apps/backend/views/index.phtml
+++ b/apps/backend/views/index.phtml
@@ -7,7 +7,6 @@
         <title>Pluton</title>
         <meta name="description" content="Pluton Configurações">
         <meta name="author" content="viniciusilveira">
-        <link rel="shortcut icon" href="<?= URL_PROJECT ?>img/logo.png"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/style.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/jquery-ui.min.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap.min.css"/>
@@ -16,6 +15,7 @@
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/dashboard.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap-datepicker.min.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap-table.css"/>
+        <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
         <!--[if lt IE 9]>
