--- a/apps/backend/views/setup/index.phtml
+++ b/apps/backend/views/setup/index.phtml
@@ -1,7 +1,8 @@
 <header class="container">
     <div class="content">
         <h1 class="main_logo text-center">
-        <img width="30%" src="<?= URL_PROJECT ?>img/logo.png"/>
+        <i class="fa fa-3x fa-ship"></i></br>
+        <label style="font-family: 'Indie Flower', cursive;">PLUTON</label>
         </h1>
     </div>
 </header>
@@ -23,7 +24,7 @@
         <article class="content text-justify">
         <h1 class="hidden">Informações Adicionais</h1>
         <p>Esses dados serão utilizados para criar um arquivo de configuração na pasta <b>projeto/apps/config/</b> nomeado <b>config.ini</b>. Caso ocorra algum erro
-        na configuração via interface gráfica, este arquivo pode ser criado manualmente. Para saber como criar o arquivo veja este <a><href="#">link</href></a>. </p>
+        na configuração via interface gráfica, este arquivo pode ser criado manualmente. Para saber como criar o arquivo veja este <a href="<?= URL_PROJECT ?>help/config" target="_blank">link</href></a>. </p>
         <div class="form-group">
             <div class="col-sm-offset-5">
                 <input type="button" class="btn btn-lg btn-default" id="prosseguir" value="Prossseguir" />
