--- a/apps/backend/views/settings/newUser.phtml
+++ b/apps/backend/views/settings/newUser.phtml
@@ -56,9 +56,11 @@
                         <?php }else{ ?>
                             <input type="hidden" name="user_id" id="inputUser_id" class="form-control" value="">
                             <div class="row text-center">
-                                <button type="button" id="deactive" class="btn btn-primary btn-lg">
-                                    <?= $user['user_active'] ? 'Desativar' : 'Ativar' ?>
-                                </button>
+                                <?php if(!$not_disable){ ?>
+                                    <button type="button" id="deactive" class="btn btn-primary btn-lg">
+                                        <?= $user['user_active'] ? 'Desativar' : 'Ativar' ?>
+                                    </button>
+                                <?php } ?>
                                 <button type="button" id="edit" class="btn btn-primary btn-lg">Salvar</button>
                             </div>
                         <?php } ?>
