--- a/apps/backend/views/setup/databaseConfig.phtml
+++ b/apps/backend/views/setup/databaseConfig.phtml
@@ -1,7 +1,8 @@
 <header class="container">
     <div class="content">
         <h1 class="main_logo text-center">
-        <img width="30%" src="<?= URL_PROJECT ?>img/logo.png"/>
+        <i class="fa fa-3x fa-ship"></i></br>
+        <label style="font-family: 'Indie Flower', cursive;">PLUTON</label>
         </h1>
     </div>
 </header>
