Corrigido validação de permissão de acesso a edição de postagens

--- a/apps/backend/views/settings/informationPanel.phtml
+++ b/apps/backend/views/settings/informationPanel.phtml
@@ -8,7 +8,7 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="glyphicon glyphicon-large glyphicon-user"></i>
+                                <i class="fa fa-3x fa-exchange"></i>
                             </div>
                             <div class="col-xs-9 text-right">
                                 <div class="huge"><?= $total_sessions?></div>
