Pequenas correções de permissões

--- a/apps/backend/views/settings/index.phtml
+++ b/apps/backend/views/settings/index.phtml
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" style="font-family: 'Indie Flower', cursive; font-size: 28px;"href="<?= URL_PROJECT ?>settings"><i class="fa fa-ship"></i><label > Pluton</label></a>
+            <a class="navbar-brand" style="font-family: 'Indie Flower'; font-size: 28px;"href="<?= URL_PROJECT ?>settings"><i class="fa fa-ship"></i> Pluton</a>
         </div>
         <!-- /.navbar-header -->
         <ul class="nav navbar-top-links navbar-right">
