Modificado hierarquização de layouts e Alterado para carregar menus da sidebar do banco de de dados

--- a/apps/backend/views/dashboard/index.phtml
+++ b/apps/backend/views/dashboard/index.phtml
@@ -1,3 +1,10 @@
+<div class="col-lg-8">
+    <div class="panel panel-default">
+        <?php $this->partial("dashboard/graphics") ?>
+    </div>
+    <?php $this->partial("dashboard/lastPosts") ?>
+</div>
+<!-- /.col-lg-8 -->
 <div class="col-lg-4" >
     <hr>
     <div >
@@ -45,7 +52,6 @@
                     </div>
                 </a>-->
             </div>
-
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <div class="row">
