--- a/apps/backend/views/dashboard/listUsers.phtml
+++ b/apps/backend/views/dashboard/listUsers.phtml
@@ -57,15 +57,7 @@
     }
     window.actionEvents = {
         'click .edit': function (e, value, row, index) {
-
-        $.ajax({
-            url: '<?= URL_PROJECT ?>/settings/newUser',
-            data: "user_id=" + row.id,
-            type: 'POST',
-            success: function(data){
-                $("#main").html(data);
-        }
-});
+            window.location.href = '<?= URL_PROJECT?>dashboard/newUser?user_id=' + row.id;
         }
     };
     function queryParams() {
