--- a/apps/backend/views/help/config.phtml
+++ b/apps/backend/views/help/config.phtml
@@ -12,7 +12,7 @@
         <h1 class="hidden">Config.ini</h1>
         <p> Exemplo de arquivo de configuração:</p>
         <article class="text-primary content col-sm-offset-1">
-        <textarea disabled cols="50" rows="7" style="resize: none;">
+        <textarea readonly cols="50" rows="7" style="resize: none;">
             [database]
             adapter  = Mysql
             host     = localhost
