--- a/apps/backend/views/settings/googleTab.phtml
+++ b/apps/backend/views/settings/googleTab.phtml
@@ -1,4 +1,4 @@
-<div class="tab-pane fade in active" id="google">
+<div class="tab-pane fade " id="google">
     <div class="col-sm-8">
         <div class="panel-heading">
             <label style="font-size: 18px;"> Configurar API do Google</label>
@@ -49,7 +49,7 @@ $("#save-google-account").click(function(){
     var form_data =new FormData($("#google-account")[0]);
     console.log("data: " + form_data);
     $.ajax({
-        url: "<?= URL_PROJECT ?>" + "security/registerGoogleAccountsApiAccess",
+        url: "<?= URL_PROJECT ?>" + "settings/registerGoogleAccountsApiAccess",
         data:  form_data,
         type: 'POST',
         dataType: 'json',
@@ -105,7 +105,7 @@ $("#edit-google-account").click(function(){
         var form_data =new FormData($("#google-account")[0]);
         console.log("data: " + form_data);
         $.ajax({
-            url: "<?= URL_PROJECT ?>" + "security/updateGoogleAccountsApiAccess",
+            url: "<?= URL_PROJECT ?>" + "settings/updateGoogleAccountsApiAccess",
             data:  form_data,
             type: 'POST',
             dataType: 'json',
